<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <!--header text for the list of toppings[char limit=20]-->
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
    <!--java file localization-->
    <string name="hundred_cups">You cannot order more than 100 cups of coffees!</string>
    <string name="zero_cups">You cannot order 0 cups of coffees!</string>
    <string name="Order_summary_name">Your name is <xliff:g id= "name" example = "Amy">%s</xliff:g></string>
    <string name="add_whipped_cream">Add Whipped Cream? :</string>
    <string name="add_chocolate">Add Chocolate? :</string>
    <string name="summary_quantity">Quantity:  </string>
    <string name="total">Total = $</string>
    <string name="thank_you">Thank You!</string>

    <string name="submitOrder_subject"> JustJava app for <xliff:g id= "name" example = "Amy">%s</xliff:g></string>
</resources>
